# llm

./: .env.template  .gitignore  README.md
projects/01_chatbot/: 01_chatbot.ipynb  requirements.txt
projects/01_chatbot_transformers/: 01_chatbot_transformers.ipynb
projects/02_tokenizer/: 02_tokenizer.ipynb  requirements.txt
projects/03_dataloader/: 03_dataloader.ipynb  requirements.txt
projects/04_document_classifier/: 04_document_classifier.ipynb  requirements.txt
projects/05_text_generator/: 05_text_generator.ipynb  requirements.txt
projects/06_word2vec/: 06_word2vec.ipynb  requirements.txt
projects/07_sentence/: 07_sentence.ipynb  requirements.txt
projects/08_attention/: 08_attention.ipynb  requirements.txt
projects/09_transformer/: 09_transformer.ipynb  requirements.txt
projects/10_gpt/: 10_gpt.ipynb  requirements.txt
projects/11_bert_pretraining/: 11_bert_pretraining.ipynb
projects/12_bert_preparing/: 12_bert_preparing.ipynb  requirements.txt
projects/13_translation/: 13_translation.ipynb  requirements.txt
projects/14_hugging_face_inference/: 14_hugging_face_inference.ipynb  requirements.txt
projects/15_hugging_face_pretraining_llm/: 15_hugging_face_pretraining_llm.ipynb  requirements.txt
projects/16_pytorch_finetuning/: 16_pytorch_finetuning.ipynb  requirements.txt
projects/17_hugging_face_finetuning/: 17_hugging_face_finetuning.ipynb  requirements.txt
projects/18_adapters_pytorch/: 18_adapters_pytorch.ipynb  requirements.txt
projects/19_lora_pytorch/: 19_lora_pytorch.ipynb  (+1 more)
projects/37_langchain_rag/: README.md  pyproject.toml  rag_utils.py
projects/38_langgraph_agents/: 38a_react_agent.ipynb  38b_langgraph_components.ipynb  38c_agentic_search.ipynb  38d_persistency_streaming.ipynb  38e_human_loop.ipynb  38f_essay_writer.ipynb  README.md  helper.py  pyproject.toml
scripts/: add_dotenv_requirements.py  fix_widget.py  setup_env.py  setup_selective_env.py
(+46 files in other folders)
