[tool.poetry]
name = "langgraph-agents"
version = "0.1.0"
description = "A LangGraph Agents project using LangGraph and LLMs"
authors = ["Viktor Szabo <szabo_viktor@lilly.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
gradio = ">=5.38.0,<6.0.0"
langchain = ">=0.3.26,<0.4.0"
langchain-ibm = ">=0.3.15,<0.4.0"
langchain-community = ">=0.3.27,<0.4.0"
langchain-text-splitters = ">=0.3.8,<0.4.0"
python-dotenv = ">=1.1.1,<2.0.0"
ibm-watsonx-ai = ">=1.3.31,<2.0.0"
chromadb = ">=1.0.15,<2.0.0"
pypdf = ">=5.8.0,<6.0.0"
pymupdf = ">=1.23.0,<2.0.0"
jupyter = ">=1.0.0,<2.0.0"
jupyterlab = ">=4.0.0,<5.0.0"
ipykernel = ">=6.25.0,<7.0.0"
openai = ">=1.0.0,<2.0.0"
httpx = ">=0.24.0,<1.0.0"
langgraph = "^0.5.3"
tavily-python = "^0.7.10"
langchain-openai = "^0.3.28"
pygraphviz = "^1.14"
langchain-tavily = "^0.2.10"
langgraph-checkpoint-sqlite = "^2.0.10"
pydantic = "^2.11.7"
docarray = "^0.41.0"
wikipedia = "^1.4.0"
openapi-pydantic = "^0.5.1"
panel = "^1.7.5"
jupyter-bokeh = "^4.0.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
